# WarGame

./: BodyArmor.cpp  BodyArmor.h  CMakeLists.txt  Collectable.cpp  Collectable.h  Computer.cpp  Computer.h  FileControl.cpp  FileControl.h  Game.cpp  Game.h  Human.cpp  Human.h  M16.cpp  M16.h  Medic.cpp  Medic.h  Missile.cpp  Missile.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  Point2d.cpp  Point2d.h  Protection.cpp  Protection.h  ShieldArmor.cpp  ShieldArmor.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h  Strategy.cpp  Strategy.h  Tree.cpp  Tree.h  Trooper.cpp  Trooper.h  UZI.cpp  (+6 more)
